- Moved logic for checking whether a weapon accessory is allowed into a weapon into the Weapon class. 
- All instances of the AllowGear node can now use gearname to allow limiting choices to individually named items (ie built-in medkit allows the Medkit item)
- Weapon accessories can now be copied and pasted into other weapons in create mode.

Application Fixes:
- Fixed issues with the Balistic Shield Exotic Melee Weapon choice not being present in the Exotic Weapon skill selector window. Closes #3856
- Dedicated Spellslinger properly allows for purchasing spells while the character does not have enough karma to afford it. Closes #3859
- Fixed a regression with lifestyle qualities not properly storing their Area, Security and Comfort values. Closes #3869
- Fixed an issue with martial arts techniques improperly storing their Source as the Page.
- Fixed a regression in the behaviour of availability values improperly causing Built-In items to count towards availabiltiy at character creation. 
- The SwapSkillAtribute Improvement now properly makes the attribute get swapped for the selected attribute.
- Fixed a crash when binding Foci, if the treenode for the focus had not been selected. Closes #3905
- Anthro drones now receive 8 base physical condition monitor boxes instead of 6, per Rigger 5 rules. I don't personally agree with this rule since it effectively means they have 10 base due to limbs, but whatever. 
- addlimb improvement now supports the use of precedence nodes to allow preventing multiple sources of limbs from stacking, ie centaurs and Liminal Bodies. Closes #3550

Data Changes:
- Tetrachromacy now adds adds +3 to Perception, with a (Visual) condition. This will be exposed to the Print method for character sheets at a later date. 
- Grapple Fist cyberware now properly uses the skill of the Grapple Gun Exotic skill.
- Fixed an issue with the Private Investigator life module that prevented it from being added.