@@ -287,6 +287,51 @@ namespace Chummer.Backend.Equipment
                                     _lstVehicleMods.Add(objMod);
                                 }
                             }
+
+                    using (XmlNodeList objXmlModList = xmlMods.SelectNodes("mod"))
+                        if (objXmlModList != null)
+                            foreach (XmlNode objXmlVehicleMod in objXmlModList)
+                            {
+                                XmlNode objXmlMod = objXmlDocument.SelectSingleNode("/chummer/mods/mod[name = \"" + objXmlVehicleMod["name"].InnerText + "\"]");
+                                if (objXmlMod != null)
+                                {
+                                    VehicleMod objMod = new VehicleMod(_objCharacter);
+                                    string strForcedValue = objXmlVehicleMod["name"].Attributes?["select"]?.InnerText ?? string.Empty;
+                                    int.TryParse(objXmlVehicleMod["rating"]?.InnerText, out int intRating);
+
+                                    objMod.Extra = strForcedValue;
+                                    objMod.Create(objXmlMod, intRating, this, 0, strForcedValue);
+                                    objMod.IncludedInVehicle = true;
+
+                                    XmlNode xmlSubsystemsNode = objXmlVehicleMod["subsystems"];
+                                    if (xmlSubsystemsNode != null)
+                                    {
+                                        // Load Cyberware subsystems first
+                                        using (XmlNodeList objXmlSubSystemNameList = xmlSubsystemsNode.SelectNodes("cyberware"))
+                                            if (objXmlSubSystemNameList?.Count > 0)
+                                            {
+                                                XmlDocument objXmlWareDocument = XmlManager.Load("cyberware.xml");
+                                                foreach (XmlNode objXmlSubsystemNode in objXmlSubSystemNameList)
+                                                {
+                                                    XmlNode objXmlSubsystem = objXmlWareDocument.SelectSingleNode(
+                                                        $"/chummer/cyberwares/cyberware[name = \"{objXmlSubsystemNode["name"]?.InnerText}\"]");
+
+                                                    if (objXmlSubsystem == null) continue;
+                                                    Cyberware objSubsystem = new Cyberware(_objCharacter);
+                                                    int intSubSystemRating = Convert.ToInt32(objXmlSubsystemNode["rating"]?.InnerText);
+                                                    objSubsystem.Create(objXmlSubsystem, new Grade(Improvement.ImprovementSource.Cyberware), Improvement.ImprovementSource.Cyberware,
+                                                        intSubSystemRating, _lstWeapons, _objCharacter.Vehicles, false, true,
+                                                        objXmlSubsystemNode["forced"]?.InnerText ?? string.Empty);
+                                                    objSubsystem.ParentID = InternalId;
+                                                    objSubsystem.Cost = "0";
+
+                                                    objMod.Cyberware.Add(objSubsystem);
+                                                }
+                                            }
+                                    }
+                                    _lstVehicleMods.Add(objMod);
+                                }
+                            }
                     XmlNode objAddSlotsNode = objXmlVehicle.SelectSingleNode("mods/addslots");
                     if (objAddSlotsNode != null)
                         int.TryParse(objAddSlotsNode.InnerText, out _intAddSlots);
